--- a/deskover-dashboard-website/src/styles.scss
+++ b/deskover-dashboard-website/src/styles.scss
@@ -12,17 +12,39 @@
 @import '~datatables.net-responsive-bs4/css/responsive.bootstrap4.min.css';
 
 body {
-    width: 100vw;
-    height: 100vh;
+  width: 100vw;
+  height: 100vh;
 }
 
 ::-webkit-scrollbar {
-    width: 0;
-    background: transparent;
+  width: 0;
+  background: transparent;
 }
 
 // CSS Custom - Start
-.dataTables_empty{
+[data-c-tooltip]:after {
+  z-index: 1000;
+  padding: 8px;
+  width: 160px;
+  background-color: #000;
+  background-color: rgba(51, 51, 51, 0.9);
+  color: #fff;
+  content: attr(data-c-tooltip);
+  font-size: 14px;
+  line-height: 1.2;
+}
+
+[data-c-tooltip]:before {
+  z-index: 1001;
+  border: 6px solid transparent;
+  background: transparent;
+  content: "";
+  margin-left: -6px;
+  margin-bottom: -12px;
+  border-top-color: rgba(51, 51, 51, 0.9)
+}
+
+.dataTables_empty {
   display: none;
 }
 
@@ -31,145 +53,145 @@ body {
 }
 
 .invalid-feedback {
-    display: block;
+  display: block;
 }
 
 .text-accent {
-    color: #4e54c8 !important;
+  color: #4e54c8 !important;
 }
 
 .icon {
-    width: 25px;
+  width: 25px;
 }
 
 .btn-icon {
-    padding: 0.625rem 0.875rem;
+  padding: 0.625rem 0.875rem;
 }
 
 .bg-faded-accent {
-    background-color: rgba(78, 84, 200, .09) !important;
+  background-color: rgba(78, 84, 200, .09) !important;
 }
 
 .bg-faded-info {
-    background-color: rgba(105, 179, 254, .09) !important;
+  background-color: rgba(105, 179, 254, .09) !important;
 }
 
 .bg-faded-danger {
-    background-color: rgba(243, 71, 112, .09) !important;
+  background-color: rgba(243, 71, 112, .09) !important;
 }
 
 .file-drop-area {
-    position: relative;
-    padding: 1rem 1rem;
-    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
-    border: 2px dashed #dae1e7;
-    background-color: #fff;
-    text-align: center;
-    cursor: pointer;
+  position: relative;
+  padding: 1rem 1rem;
+  transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+  border: 2px dashed #dae1e7;
+  background-color: #fff;
+  text-align: center;
+  cursor: pointer;
 }
 
-.file-drop-area>img {
-    width: 150px;
+.file-drop-area > img {
+  width: 150px;
 }
 
 // CSS Custom - End
 
-.user-menu>.nav-link {
-    cursor: pointer;
+.user-menu > .nav-link {
+  cursor: pointer;
 }
 
-.user-menu>.nav-link:after {
-    content: none;
+.user-menu > .nav-link:after {
+  content: none;
 }
 
-.user-menu>.dropdown-menu {
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-    padding: 0;
-    width: 280px;
+.user-menu > .dropdown-menu {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  padding: 0;
+  width: 280px;
 }
 
-.user-menu>.dropdown-menu,
-.user-menu>.dropdown-menu>.user-body {
-    border-bottom-right-radius: 4px;
-    border-bottom-left-radius: 4px;
+.user-menu > .dropdown-menu,
+.user-menu > .dropdown-menu > .user-body {
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
 }
 
-.user-menu>.dropdown-menu>li.user-header {
-    height: 175px;
-    padding: 10px;
-    text-align: center;
+.user-menu > .dropdown-menu > li.user-header {
+  height: 175px;
+  padding: 10px;
+  text-align: center;
 }
 
-.user-menu>.dropdown-menu>li.user-header>img {
-    z-index: 5;
-    height: 90px;
-    width: 90px;
-    border: 3px solid;
-    border-color: transparent;
-    border-color: rgba(255, 255, 255, 0.2);
+.user-menu > .dropdown-menu > li.user-header > img {
+  z-index: 5;
+  height: 90px;
+  width: 90px;
+  border: 3px solid;
+  border-color: transparent;
+  border-color: rgba(255, 255, 255, 0.2);
 }
 
-.user-menu>.dropdown-menu>li.user-header>p {
-    z-index: 5;
-    font-size: 17px;
-    margin-top: 10px;
+.user-menu > .dropdown-menu > li.user-header > p {
+  z-index: 5;
+  font-size: 17px;
+  margin-top: 10px;
 }
 
-.user-menu>.dropdown-menu>li.user-header>p>small {
-    display: block;
-    font-size: 12px;
+.user-menu > .dropdown-menu > li.user-header > p > small {
+  display: block;
+  font-size: 12px;
 }
 
-.user-menu>.dropdown-menu>.user-body {
-    border-bottom: 1px solid #495057;
-    border-top: 1px solid #dee2e6;
-    padding: 15px;
+.user-menu > .dropdown-menu > .user-body {
+  border-bottom: 1px solid #495057;
+  border-top: 1px solid #dee2e6;
+  padding: 15px;
 }
 
-.user-menu>.dropdown-menu>.user-body::after {
-    display: block;
-    clear: both;
-    content: '';
+.user-menu > .dropdown-menu > .user-body::after {
+  display: block;
+  clear: both;
+  content: '';
 }
 
-.user-menu>.dropdown-menu>.user-footer {
-    background-color: #f8f9fa;
-    padding: 10px;
+.user-menu > .dropdown-menu > .user-footer {
+  background-color: #f8f9fa;
+  padding: 10px;
 }
 
-.user-menu>.dropdown-menu>.user-footer::after {
-    display: block;
-    clear: both;
-    content: '';
+.user-menu > .dropdown-menu > .user-footer::after {
+  display: block;
+  clear: both;
+  content: '';
 }
 
-.user-menu>.dropdown-menu>.user-footer .btn-default {
-    color: #6c757d;
-}
-
-.user-menu .user-image {
-    border-radius: 50%;
-    float: left;
-    height: 2.1rem;
-    margin-right: 10px;
-    margin-top: -2px;
-    width: 2.1rem;
+.user-menu > .dropdown-menu > .user-footer .btn-default {
+  color: #6c757d;
 }
 
 .user-menu .user-image {
-    height: 1.6rem;
-    width: 1.6rem;
-    margin-right: 0;
-    margin-left: -8px;
+  border-radius: 50%;
+  float: left;
+  height: 2.1rem;
+  margin-right: 10px;
+  margin-top: -2px;
+  width: 2.1rem;
+}
+
+.user-menu .user-image {
+  height: 1.6rem;
+  width: 1.6rem;
+  margin-right: 0;
+  margin-left: -8px;
 }
 
 .content {
-    padding: 0 0.5rem;
+  padding: 0 0.5rem;
 }
 
 @media (min-width: 576px) {
-  .user-menu>.dropdown-menu>.user-footer .btn-default:hover {
+  .user-menu > .dropdown-menu > .user-footer .btn-default:hover {
     background-color: #f8f9fa;
   }
 
@@ -180,7 +202,7 @@ body {
     margin-top: -8px;
   }
 
-  .user-menu>.dropdown-menu>.user-body a {
+  .user-menu > .dropdown-menu > .user-body a {
     background: #ffffff !important;
     color: #495057 !important;
   }
